--- a/README
+++ b/README
@@ -1,1 +1,18 @@
-Site type ARG inspiré du site "Welcome Home": https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiCtYXZq6H-AhUFTaQEHSLkAPsQFnoECAoQAQ&url=https%3A%2F%2Fwww.clownillustration.com%2Fwelcomehomeyou&usg=AOvVaw0349ljt9N6um5qeZ0VtBeB
+Site type ARG inspiré du site "Welcome Home": https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiCtYXZq6H-AhUFTaQEHSLkAPsQFnoECAoQAQ&url=https%3A%2F%2Fwww.clownillustration.com%2Fwelcomehomeyou&usg=AOvVaw0349ljt9N6um5qeZ0VtBeB  
+Le site présente quelques erreurs d'affichage-... ou peut être pas---?  
+Qu'y a-t-il de chaché à l'intérieur-.?  
+Il faudra essayer de prendre le ConTRoLe a pArtir du début.-.
+
+Dans le code:.  
+-def pour charger les pages du site (flask)/   
+-fichier html et css pour les interfaces des différentes pages-.-.  
+-regardez bien, quelque chose pourrait vous aider-.-. 
+-vous êtes encore là?-.-.  
+-il n'y a plus rien à voir ici....  
+
+Vous perdez votre temps.-  
+Vous êtes très têtu-.  
+Ne revenez pas vous plaindre et dire que je ne vous ai pas prévenu-.-.  
+Bon tant pis.  
+
+https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiCtYXZq6H-AhUFTaQEHSLkAPsQFnoECAoQAQ&url=https%3A%2F%2Fwww.clownillustration.com%2Fwelcomehomeyou&usg=AOvVaw0349ljt9N6um5qeZ0VtBeB
