--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Site type ARG inspiré du site "Welcome Home": https://www.google.com/url?sa=t&r
 
 Le site présente quelques erreurs d'affichage-... ou peut être pas---?  
 Qu'y a-t-il de chaché à l'intérieur-.?  
-Il faudra essayer de prendre le **ConTRoLe a pArtir** du début.-.
+Il faudra essayer de prendre le ConTRoLe a pArtir du début.-.
 
 Dans le code:.  
 -def pour charger les pages du site (flask)/   
